# ViralCutter

./: .gitignore  README.md  README_en.md  ViralCutter.ipynb  api_config.json  benchmark_report.json  debug_captions.py  main_improved.py  prompt.txt  prompt_enhanced.txt  pyproject.toml  requirements.txt  subtitle_test_config.json  temp_subtitle_config.json  test_prompts.py
luts/: README.txt
prompts/: caption_validation.txt  replacement.txt  scoring.txt  signals_anime.txt  signals_comedy.txt  signals_commentary.txt  signals_cooking.txt  signals_education.txt  signals_gaming.txt  signals_manga.txt  signals_motivation.txt  signals_music.txt  signals_news.txt  signals_podcast.txt  signals_sport.txt  signals_talkshow.txt  signals_vlog.txt  split_parts.txt  tiktok_caption.txt  validation.txt  validation_rules_education.txt  validation_rules_podcast.txt  validation_rules_talkshow.txt
scripts/: ab_variants.py  active_speaker.py  add_distraction_video.py  add_music.py  adjust_subtitles.py  ai_dubbing.py  auto_thumbnail.py  benchmark_models.py  blur_detector.py  broll_insert.py  burn_subtitles.py  clip_validator.py  color_grading.py  composite_scorer.py  config.py  create_viral_segments.py  cut_segments.py  download_video.py  edit_video.py  engagement_predictor.py  face_detection_insightface.py  face_start_snap.py  fetch_distraction.py  fetch_music.py  ffmpeg_utils.py  filler_removal.py  hook_scorer.py  layout_templates.py  models.py  one_face.py  organize_output.py  overlay_effects.py  pacing_analyzer.py  post_social.py  prompt_sections.py  remove_silence.py  save_json.py  (+8 more)
(+94 files in other folders)
