[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "viralcutter"
version = "1.0.0"
description = "Automated viral clip creation pipeline"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["scripts*", "webui*", "i18n*"]
